<resources>
    <string name="app_name">Vote Now</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="cpassword">Confirm Password</string>
    <string name="register">New User? Register?</string>
    <string name="voteCode">Vote Code</string>
    <string name="title_activity_phone">Phone</string>
    <string name="checkbox">Remember me</string>
    <string name="face">Capture Face</string>
    <string name="id">Upload Id</string>
    <string name="logout">Logout</string>
    <string name="acnt_settings">Account Settings</string>
    <string name="voteNow">Vote Now</string>
    <string name="createVote">Create Vote</string>

    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="URLS">http://chisel-trawler.glitch.me/</string>
    <string name="URL">http://172.17.44.49:5555/</string>
</resources>
