<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeScreen"
    >


    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:textAlignment="center"
        app:cardBackgroundColor="#FAEBD7"
        app:cardCornerRadius="20dp"
        app:cardElevation=".7dp"
        app:contentPadding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_margin="7dp"
                android:background="#ff5959"
                android:padding="10dp">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="40dp"
                        android:layout_height="31dp"
                        android:src="@drawable/verification"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </android.support.constraint.ConstraintLayout>


            </RelativeLayout>


            <Button
                android:id="@+id/voteNow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/background_light"
                android:focusable="true"
                android:hint="@string/voteNow"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:textAlignment="center"
                android:textSize="24sp"
                />
            <Button
                android:id="@+id/createVote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/background_light"
                android:focusable="true"
                android:hint="@string/createVote"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:textAlignment="center"
                android:textSize="24sp"
                />
            <Button
                android:id="@+id/viewVote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/background_light"
                android:focusable="true"
                android:hint="View Created Vote"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:textAlignment="center"
                android:textSize="24sp"
                />
            <Button
                android:id="@+id/acntSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/background_light"
                android:focusable="true"
                android:hint="@string/acnt_settings"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:textAlignment="center"
                android:textSize="24sp"
                />
            <Button
                android:id="@+id/logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/background_light"
                android:focusable="true"
                android:hint="@string/logout"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:textAlignment="center"
                android:textSize="24sp"
                />
        </LinearLayout>


    </android.support.v7.widget.CardView>


</android.support.constraint.ConstraintLayout>