<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Verification"
    >


    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:textAlignment="center"
        app:cardBackgroundColor="#FAEBD7"
        app:cardCornerRadius="20dp"
        app:cardElevation=".7dp"
        app:contentPadding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_margin="7dp"
                android:background="#ff5959"
                android:padding="10dp">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="40dp"
                        android:layout_height="31dp"
                        android:src="@drawable/verification"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/circleView"
                        android:layout_width="127dp"
                        android:layout_height="98dp"
                        android:src="@drawable/verification"
                        app:civ_border_color="#FF000000"
                        app:civ_border_width="2dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </android.support.constraint.ConstraintLayout>


            </RelativeLayout>

            <EditText
                android:id="@+id/inputName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/background_light"
                android:focusable="true"
                android:hint="@string/name"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:textAlignment="center"
                android:textSize="24sp" />
            <TextView
                android:id="@+id/inputPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/background_light"
                android:focusable="true"
                android:hint="@string/phone"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:textAlignment="center"
                android:textSize="24sp" />
            <Button
                android:id="@+id/inputFace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/background_light"
                android:focusable="true"
                android:hint="@string/face"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:textAlignment="center"
                android:textSize="24sp"
                />
            <Button
                android:id="@+id/sideFace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/background_light"
                android:focusable="true"
                android:hint="@string/face"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:textAlignment="center"
                android:textSize="24sp"
                />
            <Button
                android:id="@+id/inputId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/background_light"
                android:focusable="true"
                android:hint="@string/id"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:textAlignment="center"
                android:textSize="24sp"
                android:inputType="textPassword"/>
        </LinearLayout>


    </android.support.v7.widget.CardView>

    <ImageButton
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@android:color/transparent"
        android:elevation="0.1dp"
        android:src="@drawable/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />
</android.support.constraint.ConstraintLayout>
